<resources>
    <string name="app_name">VList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_single">Single</string>
    <string name="menu_bulk">Bulk</string>
    <string name="menu_offline">Offline</string>


    <string name="year_lable">Enter Year</string>
    <string name="dist_label">Select District</string>
    <string name="lac_label" >Select LAC</string>
    <string name="v_center_label">Select Pooling Booth</string>
</resources>